# smolagents-flight

./: .env.sample  Makefile  docs.txt  pyproject.toml  requirements.txt
app/: app.py
app/tools/: search.py  serpapi_tools.py
