[project]
name = "smolagents-deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.0.1",
    "google-search-results>=2.4.2",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-exa>=0.2.1",
    "langchain-google-community>=2.0.7",
    "langchain-openai>=0.3.15",
    "langchain-tavily>=0.1.6",
    "smolagents[litellm]>=1.14.0",
    "streamlit>=1.45.0",
    "tenacity>=9.1.2",
]
